fix: fix horizontal scroll and active menu item

--- a/src/index.css
+++ b/src/index.css
@@ -109,6 +109,10 @@ body {
     min-height: 100vh;
 }
 
+body {
+    overflow-x: hidden;
+}
+
 #root {
     width: 100%;
     max-width: 1440px;
